<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Generals-->
    <string name="themeDark">Dark Mode</string>
    <string name="themeLight">Light Mode</string>
    <string name="button_tornar">Back</string>
    <string name="logout">Logout</string>
    <string name="player">Player</string>
    <string name="fan">Fan</string>
    <!--Pantalla de seleccio de idioma-->
    <string name="app_name">ClubPilot</string>
    <string name="seleccio_idioma">Choose a language</string>
    <string name="inicio">Get started</string>
    <!--Pantalla de inici de sessio-->
    <string name="tipo_usuari">Select user type</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="club">Club</string>"
    <string name="recover_password">You have forgotten your password?</string>
    <!--Idiomes-->
    <string name="spanish">Spanish</string>
    <string name="catalan">Catalan</string>
    <string name="english">English</string>
    <!--Pantalla de aficionat-->
    <string name="noticies">News</string>
    <string name="config">Configuration</string>
    <string name="config_fan">Configuration</string>
    <string name="theme">Dark Mode</string>
    <string name="contact_admin">Contact with admin</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="mail">Mail address</string>
    <string name="cancel">Cancel</string>
    <string name="last_password">Latest password</string>
    <string name="new_password">New password</string>
    <string name="password_recover">Recover password</string>
    <string name="save_password">Confirm Password</string>
    <string name="latest_email">Latest email</string>
    <string name="new_email">New email</string>
    <string name="confirm_password">Confirm</string>
    <string name="confirm_email">Confirm email</string>
    <string name="registerFan">Sign up</string>
    <!--Dades del fan per registrar-se-->
    <string name="username">Username</string>
    <string name="name" tools:ignore="DuplicateDefinition">Name</string>
    <string name="firstName">Surnames</string>
    <string name="emailFan">Email</string>
    <string name="passwordFan">Password</string>
    <!--Pnatalla de Jugadors-->
    <string name="dashboard">Dashboard</string>
    <string name="available">Available</string>
    <string name="welcome">Welcome</string>
    <string name="sent">Sent</string>
    <string name="message">Message</string>
    <string name="seleccionaClub">Select a team</string>
    <!--Missatges del sistema-->
    <string name="errorSelectUser">Select a user type to enter</string>
    <string name="hasLogout">You have been logged out</string>
    <string name="alert">Alert!</string>
    <string name="loginOut">You\'re about to logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dorsal">Number</string>
    <string name="disponibilitat">Available</string>
    <string name="posicio">Posicion</string>
    <string name="jugador_titol">Player</string>
</resources>