<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fan.Fan_Configuration">

    <Switch
        android:id="@+id/themeChange"
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:text="@string/themeDark"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Spinner
        android:id="@+id/spinnerIdiomes"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/themeChange"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/themeChange"
        app:layout_constraintTop_toBottomOf="@+id/themeChange" />

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="312dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:text="@string/contact_admin"
        android:textColor="#2D667C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerIdiomes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerIdiomes"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIdiomes"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="156dp"
        android:layout_height="57dp"
        android:text="@string/button_tornar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>