<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fan.Contact_Admin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/config_fan"
        app:titleTextColor="?attr/colorOnPrimary"
        tools:ignore="MissingConstraints" >

        <!-- Botón personalizado a la izquierda -->
        <ImageButton
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="Menu"
            tools:ignore="OnClick" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/contact_admin"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contact_admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:lines="6"
                android:gravity="top"
                android:padding="10dp"
                android:textColorHint="?attr/colorSecondary"
                android:textColor="?attr/colorSecondary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/buttonSentEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:elevation="4dp"
                android:textColor="@color/white"
                android:text="@string/sent"
                android:textSize="15sp"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="62dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>