<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_light"
    tools:context=".Player.Account_Configuration">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/config_fan"
        app:titleTextColor="?attr/colorSecondary"
        tools:ignore="MissingConstraints">

        <!-- Botón personalizado a la izquierda -->
        <ImageButton
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="Menu"
            tools:ignore="OnClick" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="301dp"
        android:layout_height="97dp"
        android:layout_marginBottom="524dp"
        android:text="@string/recover_password"
        android:textAlignment="center"
        android:textColor="?attr/colorSecondary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:orientation="vertical"
        android:paddingTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/account"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="76dp"
                android:text="@string/sent"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/mail"
                android:textColor="?attr/colorSecondary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.004" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/locked" />


</androidx.constraintlayout.widget.ConstraintLayout>